force-app/main/default/objects/IntegrationFlow__c/IntegrationFlow__c.object-meta.xml
<CustomObject>
    <description>Configurable synchronization flow between Salesforce and an external system.</description>
    <label>Integration Flow</label>
    <nameField>
        <label>Integration Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>