force-app/main/default/objects/IntegrationFlow__c/fields/ConflictStrategy__c.field-meta.xml
<CustomField>
    <fullName>ConflictStrategy__c</fullName>
    <label>Conflict Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Wins</fullName>
                <default>true</default>
                <label>Salesforce Wins</label>
            </value>
            <value>
                <fullName>External Wins</fullName>
            </value>
            <value>
                <fullName>Latest Wins</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>