force-app/main/default/objects/IntegrationFlow__c/fields/EndpointPath__c.field-meta.xml
<CustomField>
    <fullName>EndpointPath__c</fullName>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>