force-app/main/default/objects/IntegrationFlow__c/fields/ExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdField__c</fullName>
    <label>External ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>