force-app/main/default/objects/IntegrationFlow__c/fields/IntegrationSystem__c.field-meta.xml
<CustomField>
    <fullName>IntegrationSystem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integration System</label>
    <referenceTo>IntegrationSystem__c</referenceTo>
    <relationshipLabel>Integration Flows</relationshipLabel>
    <relationshipName>IntegrationFlows</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>