force-app/main/default/objects/IntegrationFlow__c/fields/NextRunAt__c.field-meta.xml
<CustomField>
    <fullName>NextRunAt__c</fullName>
    <label>Next Run At</label>
    <type>DateTime</type>
</CustomField>