force-app/main/default/objects/IntegrationFlow__c/fields/PayloadMode__c.field-meta.xml
<CustomField>
    <fullName>PayloadMode__c</fullName>
    <label>Payload Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envelope</fullName>
                <default>true</default>
                <label>Envelope</label>
            </value>
            <value>
                <fullName>Raw Mapping</fullName>
            </value>
            <value>
                <fullName>Root Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>