force-app/main/default/objects/IntegrationFlow__c/fields/PayloadRootKey__c.field-meta.xml
<CustomField>
    <fullName>PayloadRootKey__c</fullName>
    <label>Payload Root Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>