force-app/main/default/objects/IntegrationFlow__c/fields/RetryDelayMinutes__c.field-meta.xml
<CustomField>
    <fullName>RetryDelayMinutes__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Retry Delay Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>