force-app/main/default/objects/IntegrationFlow__c/fields/RetryMaxAttempts__c.field-meta.xml
<CustomField>
    <fullName>RetryMaxAttempts__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Retry Max Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>