force-app/main/default/objects/IntegrationFlow__c/fields/ScheduleFrequencyMinutes__c.field-meta.xml
<CustomField>
    <fullName>ScheduleFrequencyMinutes__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Schedule Frequency Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>