force-app/main/default/objects/IntegrationFlow__c/fields/TriggerMode__c.field-meta.xml
<CustomField>
    <fullName>TriggerMode__c</fullName>
    <label>Trigger Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Event Driven</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>